fix squishing of all devs and all projects homepage views. Increase date font by .2em

--- a/meet-the-need/app/assets/stylesheets/application.scss
+++ b/meet-the-need/app/assets/stylesheets/application.scss
@@ -241,5 +241,5 @@ input[type=submit] {
 
 .date {
   font-style: italic;
-  font-size: .7em;
+  font-size: .9em;
 }
